--- a/Project/FinalProject/FinalProject/Client/ClientUI.xaml
+++ b/Project/FinalProject/FinalProject/Client/ClientUI.xaml
@@ -5,8 +5,64 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FinalProject"
         mc:Ignorable="d"
-        Title="ClientUI" Height="300" Width="300">
+        Title="ClientUI" Height="381.992" Width="601.271">
     <Grid>
-        
+        <Button x:Name="LoginButton" Content="Login" HorizontalAlignment="Left" Margin="508,10,0,0" VerticalAlignment="Top" Width="75"/>
+        <TabControl x:Name="tabControl" HorizontalAlignment="Left" Height="331" Margin="10,10,0,0" VerticalAlignment="Top" Width="573">
+            <TabItem>
+                <TabItem.Header>
+                    <Label Content="Browse" MouseLeftButtonDown="TabItemMouseDown"></Label>
+                </TabItem.Header>
+                <Grid Background="#FFE5E5E5">
+                    <DataGrid x:Name="dataGrid" HorizontalAlignment="Left" Margin="0,10,0,0" VerticalAlignment="Top" Height="233" Width="332"/>
+                    <Image x:Name="image" HorizontalAlignment="Left" Height="258" Margin="337,10,0,0" VerticalAlignment="Top" Width="220"/>
+                    <Button x:Name="AddToCartButton" Content="Add Selected To Cart" HorizontalAlignment="Left" Margin="206,248,0,0" VerticalAlignment="Top" Width="126"/>
+                </Grid>
+            </TabItem>
+            <TabItem>
+                <TabItem.Header>
+                    <Label Content="Search" MouseLeftButtonDown="TabItemMouseDown"></Label>
+                </TabItem.Header>
+                <Grid Background="#FFE5E5E5">
+                    <TextBox x:Name="SearchBox" HorizontalAlignment="Left" Height="23" Margin="10,10,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="242"/>
+                    <Button x:Name="SearchButton" Content="Search" HorizontalAlignment="Left" Margin="257,9,0,0" VerticalAlignment="Top" Width="75" Height="24"/>
+                    <Canvas HorizontalAlignment="Left" Height="18" Margin="10,38,0,0" VerticalAlignment="Top" Width="236">
+                        <RadioButton x:Name="TitleButton" Content="Title" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                        <RadioButton x:Name="AuthorButton" Content="Author" Canvas.Left="46"/>
+                        <RadioButton x:Name="GenreButton" Content="Genre" Canvas.Left="107"/>
+                        <RadioButton x:Name="PublisherButton" Content="Publisher" Canvas.Left="163"/>
+                    </Canvas>
+                    <ListBox x:Name="SearchResultList" HorizontalAlignment="Left" Height="207" Margin="10,61,0,0" VerticalAlignment="Top" Width="322"/>
+                    <Image x:Name="SearchResultImage" HorizontalAlignment="Left" Height="258" Margin="337,10,0,0" VerticalAlignment="Top" Width="220"/>
+                    <Button x:Name="GoToStoreButton" Content="Go To Store" HorizontalAlignment="Left" Margin="257,36,0,0" VerticalAlignment="Top" Width="75"/>
+                </Grid>
+            </TabItem>
+            <TabItem>
+                <TabItem.Header>
+                    <Label Content="Cart" MouseLeftButtonDown="TabItemMouseDown"></Label>
+                </TabItem.Header>
+                <Grid Background="#FFE5E5E5">
+                    <ListBox x:Name="CartList" HorizontalAlignment="Left" Height="184" Margin="10,10,0,0" VerticalAlignment="Top" Width="322"/>
+                    <Button x:Name="ClearSelectedButton" Content="Clear Selected" HorizontalAlignment="Left" Margin="10,207,0,0" VerticalAlignment="Top" Width="90"/>
+                    <Button x:Name="ClearAllButton" Content="Clear All" HorizontalAlignment="Left" Margin="242,207,0,0" VerticalAlignment="Top" Width="90"/>
+                    <Image x:Name="CartPreview" HorizontalAlignment="Left" Height="258" Margin="337,10,0,0" VerticalAlignment="Top" Width="220"/>
+                    <Button x:Name="CheckOutButton" Content="Check Out" HorizontalAlignment="Left" Margin="242,248,0,0" VerticalAlignment="Top" Width="90"/>
+                    <Label x:Name="label" Content="Total:" HorizontalAlignment="Left" Margin="10,245,0,0" VerticalAlignment="Top"/>
+                    <Label x:Name="TotalLabel" Content="$0.00" HorizontalAlignment="Left" Margin="53,245,0,0" VerticalAlignment="Top"/>
+                </Grid>
+            </TabItem>
+            <TabItem>
+                <TabItem.Header>
+                    <Label Content="Notifications" MouseLeftButtonDown="TabItemMouseDown"></Label>
+                </TabItem.Header>
+                <Grid Background="#FFE5E5E5">
+                    <Button x:Name="ClearSelectedNotificationButton" Content="Clear Selected" HorizontalAlignment="Left" Margin="467,10,0,0" VerticalAlignment="Top" Width="90"/>
+                    <ListBox x:Name="NotificationList" HorizontalAlignment="Left" Height="258" Margin="10,10,0,0" VerticalAlignment="Top" Width="452"/>
+                    <Button x:Name="ClearAllNotificationButton" Content="Clear All" HorizontalAlignment="Left" Margin="467,35,0,0" VerticalAlignment="Top" Width="90"/>
+                </Grid>
+            </TabItem>
+        </TabControl>
+        <Label x:Name="LoggedInLabel" Content="" HorizontalAlignment="Left" Margin="445,7,0,0" VerticalAlignment="Top" Width="58"/>
+
     </Grid>
 </Window>
