--- a/Project/FinalProject/FinalProject/Client/Client.xaml
+++ b/Project/FinalProject/FinalProject/Client/Client.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="FinalProject.ClientUi"
+﻿<Window x:Class="FinalProject.Client"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FinalProject"
         mc:Ignorable="d"
-        Title="ClientUI" Height="381.992" Width="601.271">
+        Title="Client" Height="381.992" Width="601.271">
     <Grid>
         <Button x:Name="LoginButton" Content="Login" HorizontalAlignment="Left" Margin="508,10,0,0" VerticalAlignment="Top" Width="75"/>
         <TabControl x:Name="tabControl" HorizontalAlignment="Left" Height="331" Margin="10,10,0,0" VerticalAlignment="Top" Width="573">
@@ -14,9 +14,11 @@
                     <Label Content="Browse" MouseLeftButtonDown="TabItemMouseDown"></Label>
                 </TabItem.Header>
                 <Grid Background="#FFE5E5E5">
-                    <DataGrid x:Name="dataGrid" HorizontalAlignment="Left" Margin="0,10,0,0" VerticalAlignment="Top" Height="233" Width="332"/>
-                    <Image x:Name="image" HorizontalAlignment="Left" Height="258" Margin="337,10,0,0" VerticalAlignment="Top" Width="220"/>
+                    <DataGrid x:Name="BrowseGrid" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Height="233" Width="322"/>
+                    <Image x:Name="image" HorizontalAlignment="Left" Height="160" Margin="399,10,0,0" VerticalAlignment="Top" Width="107"/>
                     <Button x:Name="AddToCartButton" Content="Add Selected To Cart" HorizontalAlignment="Left" Margin="206,248,0,0" VerticalAlignment="Top" Width="126"/>
+                    <TextBlock x:Name="BrowseDescriptionText" HorizontalAlignment="Left" Margin="337,175,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Height="93" Width="220"/>
+                    <Button x:Name="RefreshButton" Content="Refresh" HorizontalAlignment="Left" Margin="10,248,0,0" VerticalAlignment="Top" Width="75" Click="RefreshButton_Click"/>
                 </Grid>
             </TabItem>
             <TabItem>
@@ -25,16 +27,17 @@
                 </TabItem.Header>
                 <Grid Background="#FFE5E5E5">
                     <TextBox x:Name="SearchBox" HorizontalAlignment="Left" Height="23" Margin="10,10,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="242"/>
-                    <Button x:Name="SearchButton" Content="Search" HorizontalAlignment="Left" Margin="257,9,0,0" VerticalAlignment="Top" Width="75" Height="24"/>
+                    <Button x:Name="SearchButton" Content="Search" HorizontalAlignment="Left" Margin="257,9,0,0" VerticalAlignment="Top" Width="75" Height="24" Click="SearchButton_Click"/>
                     <Canvas HorizontalAlignment="Left" Height="18" Margin="10,38,0,0" VerticalAlignment="Top" Width="236">
                         <RadioButton x:Name="TitleButton" Content="Title" HorizontalAlignment="Left" VerticalAlignment="Top"/>
                         <RadioButton x:Name="AuthorButton" Content="Author" Canvas.Left="46"/>
                         <RadioButton x:Name="GenreButton" Content="Genre" Canvas.Left="107"/>
                         <RadioButton x:Name="PublisherButton" Content="Publisher" Canvas.Left="163"/>
                     </Canvas>
-                    <ListBox x:Name="SearchResultList" HorizontalAlignment="Left" Height="207" Margin="10,61,0,0" VerticalAlignment="Top" Width="322"/>
-                    <Image x:Name="SearchResultImage" HorizontalAlignment="Left" Height="258" Margin="337,10,0,0" VerticalAlignment="Top" Width="220"/>
-                    <Button x:Name="GoToStoreButton" Content="Go To Store" HorizontalAlignment="Left" Margin="257,36,0,0" VerticalAlignment="Top" Width="75"/>
+                    <ListBox x:Name="SearchResultList" HorizontalAlignment="Left" Height="207" Margin="10,61,0,0" VerticalAlignment="Top" Width="322" SelectionMode="Single"/>
+                    <Image x:Name="SearchResultImage" HorizontalAlignment="Left" Height="160" Margin="399,10,0,0" VerticalAlignment="Top" Width="107"/>
+                    <Button x:Name="GoToStoreButton" Content="Go To Store" HorizontalAlignment="Left" Margin="257,36,0,0" VerticalAlignment="Top" Width="75" Click="GoToStoreButton_Click"/>
+                    <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="337,175,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Height="93" Width="220"/>
                 </Grid>
             </TabItem>
             <TabItem>
@@ -45,10 +48,11 @@
                     <ListBox x:Name="CartList" HorizontalAlignment="Left" Height="184" Margin="10,10,0,0" VerticalAlignment="Top" Width="322"/>
                     <Button x:Name="ClearSelectedButton" Content="Clear Selected" HorizontalAlignment="Left" Margin="10,207,0,0" VerticalAlignment="Top" Width="90"/>
                     <Button x:Name="ClearAllButton" Content="Clear All" HorizontalAlignment="Left" Margin="242,207,0,0" VerticalAlignment="Top" Width="90"/>
-                    <Image x:Name="CartPreview" HorizontalAlignment="Left" Height="258" Margin="337,10,0,0" VerticalAlignment="Top" Width="220"/>
+                    <Image x:Name="CartPreview" HorizontalAlignment="Left" Height="160" Margin="394,10,0,0" VerticalAlignment="Top" Width="107"/>
                     <Button x:Name="CheckOutButton" Content="Check Out" HorizontalAlignment="Left" Margin="242,248,0,0" VerticalAlignment="Top" Width="90"/>
                     <Label x:Name="label" Content="Total:" HorizontalAlignment="Left" Margin="10,245,0,0" VerticalAlignment="Top"/>
                     <Label x:Name="TotalLabel" Content="$0.00" HorizontalAlignment="Left" Margin="53,245,0,0" VerticalAlignment="Top"/>
+                    <TextBlock x:Name="textBlock1" HorizontalAlignment="Left" Margin="337,175,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Height="93" Width="220"/>
                 </Grid>
             </TabItem>
             <TabItem>
