--- a/Project/FinalProject/FinalProject/Store/Producer.xaml
+++ b/Project/FinalProject/FinalProject/Store/Producer.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="FinalProject.ProducerUi"
+﻿<Window x:Class="FinalProject.Producer"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FinalProject"
         mc:Ignorable="d"
-        Title="ProducerUI" Height="369.333" Width="569">
+        Title="Producer" Height="369.333" Width="569">
     <Grid>
         <TabControl x:Name="tabControl" HorizontalAlignment="Left" Height="318" Margin="10,10,0,0" VerticalAlignment="Top" Width="541">
             <TabItem Header="Unreleased">
