--- a/Project/FinalProject/FinalProject/Client/Client.xaml
+++ b/Project/FinalProject/FinalProject/Client/Client.xaml
@@ -5,10 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FinalProject"
         mc:Ignorable="d"
-        Title="Client" Height="381.992" Width="601.271">
+        Title="Client" Height="720" Width="1280">
     <Grid>
-        <Button x:Name="LoginButton" Content="Login" HorizontalAlignment="Left" Margin="508,10,0,0" VerticalAlignment="Top" Width="75"/>
-        <TabControl x:Name="tabControl" HorizontalAlignment="Left" Height="331" Margin="10,10,0,0" VerticalAlignment="Top" Width="573">
+        <TabControl x:Name="tabControl" HorizontalAlignment="Left" Height="639" Margin="0,50,0,0" VerticalAlignment="Top" Width="1272">
             <TabItem>
                 <TabItem.Header>
                     <Label Content="Browse" MouseLeftButtonDown="TabItemMouseDown"></Label>
@@ -68,6 +67,7 @@
             </TabItem>
         </TabControl>
         <Label x:Name="LoggedInLabel" Content="" HorizontalAlignment="Left" Margin="445,7,0,0" VerticalAlignment="Top" Width="58"/>
+        <Button x:Name="LoginButton" Content="Login" HorizontalAlignment="Left" Margin="1180,10,0,0" VerticalAlignment="Top" Width="82" MouseDown="LoginButton_Clicked" Height="40"/>
 
     </Grid>
 </Window>
