--- a/Project/FinalProject/FinalProject/Store/Producer.xaml
+++ b/Project/FinalProject/FinalProject/Store/Producer.xaml
@@ -5,25 +5,37 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FinalProject"
         mc:Ignorable="d"
-        Title="Producer" Height="369.333" Width="569">
+        Title="Producer" Height="697.833" Width="1239.5">
     <Grid>
-        <TabControl x:Name="tabControl" HorizontalAlignment="Left" Height="318" Margin="10,10,0,0" VerticalAlignment="Top" Width="541">
+        <TabControl x:Name="tabControl" HorizontalAlignment="Left" Height="647" Margin="10,10,0,0" VerticalAlignment="Top" Width="1212">
             <TabItem Header="Unreleased">
                 <Grid Background="#FFE5E5E5">
-                    <ListBox x:Name="NotInStoreBox" HorizontalAlignment="Left" Height="245" Margin="10,10,0,0" VerticalAlignment="Top" Width="290"/>
-                    <Button x:Name="AddToStoreButton" Content="Add Selected To Store" HorizontalAlignment="Left" Margin="170,260,0,0" VerticalAlignment="Top" Width="130" Click="AddToStoreButton_Click"/>
-                    <Image x:Name="PreviewImage" HorizontalAlignment="Left" Height="258" Margin="305,10,0,0" VerticalAlignment="Top" Width="220"/>
+                    <Button x:Name="AddToStoreButton" Content="Add Selected To Store" HorizontalAlignment="Left" Margin="661,589,0,0" VerticalAlignment="Top" Width="130" Click="AddToStoreButton_Click"/>
+                    <Image x:Name="UnreleasedPreview" HorizontalAlignment="Left" Height="376" Margin="868,28,0,0" VerticalAlignment="Top" Width="251"/>
+                    <TextBlock x:Name="UnreleasedDescription" HorizontalAlignment="Left" Margin="796,409,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Height="200" Width="400"/>
+                    <DataGrid x:Name="UnreleasedGrid" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Height="574" Width="781" SelectionChanged="UnreleasedSelected">
+                        <DataGrid.Resources>
+                            <Style TargetType="DataGridCell">
+                                <Setter Property="BorderThickness" Value="0"/>
+                                <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
+                            </Style>
+                        </DataGrid.Resources>
+                    </DataGrid>
                 </Grid>
             </TabItem>
             <TabItem Header="Released">
                 <Grid Background="#FFE5E5E5">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="31*"/>
-                        <ColumnDefinition Width="504*"/>
-                    </Grid.ColumnDefinitions>
-                    <ListBox x:Name="InStoreBox" HorizontalAlignment="Left" Height="245" Margin="10,10,0,0" VerticalAlignment="Top" Width="290" Grid.ColumnSpan="2"/>
-                    <Button x:Name="UpdateQuantityButton" Content="Update Quantity" HorizontalAlignment="Left" Margin="139.155,260,0,0" VerticalAlignment="Top" Width="130" Click="UpdateQuantityButton_Click" Grid.Column="1"/>
-                    <Image x:Name="PreviewStoreImage" HorizontalAlignment="Left" Height="258" Margin="274.155,10,0,0" VerticalAlignment="Top" Width="220" Grid.Column="1"/>
+                    <Button x:Name="UpdateQuantityButton" Content="Update Quantity" HorizontalAlignment="Left" Margin="661,589,0,0" VerticalAlignment="Top" Width="130" Click="UpdateQuantityButton_Click"/>
+                    <Image x:Name="ReleasedPreview" HorizontalAlignment="Left" Height="376" Margin="868,28,0,0" VerticalAlignment="Top" Width="251"/>
+                    <TextBlock x:Name="ReleasedDescription" HorizontalAlignment="Left" Margin="796,409,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Height="200" Width="400"/>
+                    <DataGrid x:Name="ReleasedGrid" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Height="574" Width="781" SelectionChanged="ReleasedSelected">
+                        <DataGrid.Resources>
+                            <Style TargetType="DataGridCell">
+                                <Setter Property="BorderThickness" Value="0"/>
+                                <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
+                            </Style>
+                        </DataGrid.Resources>
+                    </DataGrid>
                 </Grid>
             </TabItem>
         </TabControl>
