--- a/Project/FinalProject/FinalProject/Client/Client.xaml
+++ b/Project/FinalProject/FinalProject/Client/Client.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FinalProject"
         mc:Ignorable="d"
-        Title="Client" Height="720" Width="1280" Closing="SaveUsers">
+        Title="Client" Height="720" Width="1280" Closing="SaveUsers" Closed="Client_OnClosed">
     <Grid>
         <TabControl x:Name="tabControl" HorizontalAlignment="Left" Height="639" Margin="0,50,0,0" VerticalAlignment="Top" Width="1272">
             <TabItem>
